Hardware: Update PCB and schematics

--- a/Software/keil-mdk/TomatoClock.uvprojx
+++ b/Software/keil-mdk/TomatoClock.uvprojx
@@ -10,6 +10,7 @@
       <TargetName>TomatoClock</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
+      <pCCUsed>5060300::V5.06 update 3 (build 300)::ARMCC</pCCUsed>
       <TargetOption>
         <TargetCommonOption>
           <Device>STM32F103C8</Device>
@@ -334,7 +335,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F10X_MD,USE_STDPERIPH_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath></IncludePath>
+              <IncludePath>.\fwlib\inc;.\atklib\delay;.\atklib\sys;.\atklib\usart;.\core;.\user</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
